Fix input style on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,11 @@ body {
   box-sizing: border-box;
 }
 
+.search-input::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  opacity: 1;
+}
+
 .search-button {
   padding: 10px 15px;
   font-size: 0.9rem;
@@ -218,23 +223,7 @@ body {
     color: #cdcdcd;
 }
 
-@media (max-width: 1280px) {
-
-}
-
 @media (max-width: 768px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-
-  input[type="text"] {
-    font-size: 1rem;
-  }
-
-  button {
-    font-size: 1rem;
-  }
-
   .weather h2 {
     font-size: 2rem;
   }
@@ -260,6 +249,24 @@ body {
   .recent-search-item {
     width: 90%;
     margin-bottom: 10px;
+  }
+
+  .search-container {
+    width: 90%;
+  }
+
+  .input-container {
+    width: 100%; /* Make the container 100% of the parent width */
+  }
+
+  .search-input {
+    font-size: 0.8rem; /* Slightly reduce font size */
+    padding: 8px; /* Adjust padding for smaller screens */
+  }
+
+  .search-button {
+    padding: 8px 12px; /* Adjust button padding */
+    font-size: 0.8rem; /* Reduce button font size */
   }
 }
 
